--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -131,6 +131,18 @@
       max-width: 150px;
       margin: 0.5rem;
     }
+.seat-btn.resaltado {
+  outline: 3px solid #007bff;
+  outline-offset: -2px;
+  box-shadow: 0 0 5px #007bff;
+  background-color: #cce5ff;
+  transition: background-color 0.3s, outline-color 0.3s, transform 0.2s;
+  transform: scale(1.05);
+  z-index: 1;
+  position: relative;
+}
+
+
   </style>
 </head>
 <body>
@@ -349,11 +361,15 @@
       </div>
     </div>
   </div>
-
+<script src="/socket.io/socket.io.js"></script>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
   ></script>
 
   <script src="js/main.js"></script>
+
+  <script src="https://cdn.socket.io/4.6.1/socket.io.min.js"></script>
+<script src="/socket.io/socket.io.js"></script>
+
 </body>
 </html>
